Fix Edge freehand draw bug. Fix tweet button not working when canvas zoom overlaps (#38)

--- a/client/css/canvas.css
+++ b/client/css/canvas.css
@@ -96,7 +96,8 @@ body {
     -ms-interpolation-mode: nearest-neighbor;
     opacity: 0;
     position: relative;
-    z-index: 1000;
+    z-index: 10;
+    touch-action: none;
 }
 
 #subcanvas {
@@ -108,6 +109,7 @@ body {
     position: absolute;
     top: 0px;
     right: 0px;
+    z-index: 30;
 }
 
 #coordinates-container {
@@ -123,6 +125,7 @@ body {
     color: #ffffff;
     cursor: move;
     font-family: Arial, Helvetica, sans-serif;
+    z-index: 20;
 }
 
 .header-block-container {
